feat: add expense detail page
